--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
